--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
 /* HERO */
 .hero {
   height: 70vh;
-  background: url("tecnico.jpg") center/cover no-repeat;
+  background: url("images/tecnico.jpg") center/cover no-repeat;
   position: relative;
 }
 
