--- a/style.css
+++ b/style.css
@@ -142,8 +142,10 @@ h2 {
 
 @media (min-width: 768px) {
   .header {
+    padding: 10px;
     max-width: 1200px;
     margin: 0 auto;
+    
   }
 
   /* Esconde o hamburguer */
@@ -173,4 +175,21 @@ h2 {
     background-color: #0fb14a; /* verde moderno */
     color: #fff;
   }
+
+    .hero {
+
+        padding:10px;
+        background-size: 50%;
+        height: auto;
+    }
+
+    .hero-overlay {
+        height: 635px;
+        display: flex;
+        align-items: center;
+    }
+    
+
+    
 }
+
