create carousel in avaliations and modern button google

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
+  box-sizing: border-box;
+}
+html, body {
+  overflow-x: hidden;
 }
 
 body {
@@ -223,4 +227,64 @@ h2 {
 
 .dot.active {
   background: #2ecc71; /* verde Nexus */
+}
+
+
+
+/* AVALIAÇÕES*/
+.reviews {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 40px 0;
+}
+
+.carousel {
+  width: 90%;
+  max-width: 500px;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.review-slide {
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.review-slide img {
+  width: 100%;
+  height:400px;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+/* Estilização do botão avaliações*/
+
+.btn-google {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 14px 28px;
+  background: linear-gradient(135deg, #4285F4, #34A853);
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  border-radius: 50px;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+.btn-google:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 12px 25px rgba(0, 0, 0, 0.25);
+}
+
+.btn-google:active {
+  transform: scale(0.97);
 }
