--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
   box-sizing: border-box;
   font-family: Arial, sans-serif;
   box-sizing: border-box;
+  
 }
+img {
+  max-width: 100%;
+  height: auto;
+  
+}
+
 html, body {
   overflow-x: hidden;
 }
