--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ h2 {
 
 .footer-logo {
   width: 140px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .footer-top p {
@@ -488,7 +488,7 @@ h2 {
   border-top: 1px solid rgba(0, 255, 136, 0.2);
   padding: 30px 20px;
   max-width: 1200px;
-  margin: auto;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
