atualização margin footer

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ ul{
   
 }
 body {
+  margin:0px;
   background: #fff;
   color: #111;
 }
@@ -331,7 +332,7 @@ h2 {
 }
 
 .localizacao  {
-  padding: 40px 20px;
+  padding: 20px 10px;
   text-align: center;
 }
 
@@ -358,6 +359,7 @@ h2 {
 .adress {
   display: inline-block;
   margin-top: 20px;
+  
   padding: 14px 28px;
   background: linear-gradient(135deg, black, #34A853);
   color: #fff;
@@ -376,8 +378,9 @@ h2 {
 .premium-footer {
   background: radial-gradient(circle at top, #0f2a1f 0%, #0b0b0b 60%);
   color: white;
-  padding-top: 60px;
+  padding-top: 10px;
   font-family: Arial, sans-serif;
+  margin-top: 0%;
 }
 
 .footer-top {
@@ -458,8 +461,8 @@ h2 {
   width: 100%;
   background: linear-gradient(to bottom, #0f2a1f, #0b0b0b);
   color: white;
-  padding-top: 60px;
-  margin-top: 80px;
+  padding-top: 30px;
+  margin-top: 0px;
 }
 
 .footer-top {
