--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 16px;
+  position: relative;
+  z-index: 1000;
 }
 
 .logo {
@@ -63,10 +65,25 @@ body {
 
 /* MENU */
 .mobile-menu {
-  display: none;
+  position: fixed;
+  top: 0;
+  right:0;
+  width:45% ;
+  max-width: 200px;
+  height:100vh;
+  background-color: #000;
+  transform: translateX(100%);
+  transition: transform 0.4s ease;
+
+  z-index: 9999;
+
+  display: flex;
   flex-direction: column;
-  background: #111;
-  text-align: center;
+  padding-top: 80px;
+}
+
+.mobile-menu.active {
+  transform: translateX(0);
 }
 
 .mobile-menu a {
