--- a/style.css
+++ b/style.css
@@ -50,17 +50,52 @@ body {
 }
 
 .menu-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
+  
+    position: relative;
+    width: 30px;
+    height: 22px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 10001;
 }
 
 .menu-btn span {
-  display: block;
-  width: 25px;
-  height: 3px;
-  background: #000;
-  margin: 5px 0;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: #111;
+    left: 0;
+    transition: 0.3s ease;
+}
+.menu-btn span:nth-child(1) {
+    top: 0;
+}
+
+.menu-btn span:nth-child(2) {
+    top: 9px;
+}
+
+.menu-btn span:nth-child(3) {
+    top: 18px;
+}
+
+.close-menu {
+    position: absolute;
+    top: 25px;
+    right: 20px;
+
+    background: none;
+    border: none;
+    color: white;
+    font-size: 28px;
+    cursor: pointer;
+
+    transition: 0.3s;
+}
+
+.close-menu:hover {
+    color: #00ff88; /* sua cor principal */
 }
 
 /* MENU */
@@ -75,7 +110,7 @@ body {
   transform: translateX(100%);
   transition: transform 0.4s ease;
 
-  z-index: 9999;
+  z-index: 10000;
 
   display: flex;
   flex-direction: column;
